--- a/FrontEnd/src/Styles/Input.css
+++ b/FrontEnd/src/Styles/Input.css
@@ -326,11 +326,11 @@
   }
   
   .has-left-icon {
-    padding-left: var(--space-8);
+    padding-left: calc(var(--space-10) + var(--space-3));
   }
   
   .has-right-icon {
-    padding-right: var(--space-8);
+    padding-right: calc(var(--space-10) + var(--space-2));
   }
 }
 
